{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 244,
  "lineage": "ba64d9b9-375c-596d-d3c9-4b9c35851494",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:299953772130:loadbalancer/app/example-webapp-lb/0745f288a686903f",
            "arn_suffix": "app/example-webapp-lb/0745f288a686903f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-webapp-lb-429245762.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:299953772130:loadbalancer/app/example-webapp-lb/0745f288a686903f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-webapp-lb",
            "security_groups": [
              "sg-0159ca47e42669760"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0572fc1f27ab7c1df"
              },
              {
                "subnet_id": "subnet-0bf699f8f463662a8"
              },
              {
                "subnet_id": "subnet-0fff1606df335f304"
              }
            ],
            "subnets": [
              "subnet-0572fc1f27ab7c1df",
              "subnet-0bf699f8f463662a8",
              "subnet-0fff1606df335f304"
            ],
            "tags": {
              "Environment": "example-webapp"
            },
            "tags_all": {
              "Environment": "example-webapp"
            },
            "vpc_id": "vpc-0d6425f04e05ec8bd",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb_security_group",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:299953772130:listener/app/example-webapp-lb/0745f288a686903f/e8e86317abeee262",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:299953772130:targetgroup/example-webapp-lb-tg/4124c2b682c7700b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:299953772130:listener/app/example-webapp-lb/0745f288a686903f/e8e86317abeee262",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:299953772130:loadbalancer/app/example-webapp-lb/0745f288a686903f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp_alb",
            "aws_lb_target_group.webapp_tg",
            "aws_security_group.elb_security_group",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:299953772130:targetgroup/example-webapp-lb-tg/4124c2b682c7700b",
            "arn_suffix": "targetgroup/example-webapp-lb-tg/4124c2b682c7700b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:299953772130:targetgroup/example-webapp-lb-tg/4124c2b682c7700b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-webapp-lb-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6425f04e05ec8bd"
          },
          "dependencies": [
            "module.network.aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:299953772130:security-group/sg-054752c41a9e08546",
            "description": "Manage traffic to app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054752c41a9e08546",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow-http-8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0159ca47e42669760"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "WebApp-Server-Security-Group",
            "name_prefix": "",
            "owner_id": "299953772130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "web_app"
            },
            "tags_all": {
              "Environment": "web_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6425f04e05ec8bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_security_group",
            "module.network.aws_vpc.web_app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:299953772130:security-group/sg-0159ca47e42669760",
            "description": "Manage ELB Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0159ca47e42669760",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow-http-80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ELB-Security-Group",
            "name_prefix": "",
            "owner_id": "299953772130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "web_app"
            },
            "tags_all": {
              "Environment": "web_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6425f04e05ec8bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.web_app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:299953772130:internet-gateway/igw-0fc0920e8a5222c70",
            "id": "igw-0fc0920e8a5222c70",
            "owner_id": "299953772130",
            "tags": {
              "Environment": "example-webapp"
            },
            "tags_all": {
              "Environment": "example-webapp"
            },
            "vpc_id": "vpc-0d6425f04e05ec8bd"
          },
          "dependencies": [
            "module.network.aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:299953772130:route-table/rtb-089dd6c73e856d72c",
            "id": "rtb-089dd6c73e856d72c",
            "owner_id": "299953772130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc0920e8a5222c70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "example-webapp"
            },
            "tags_all": {
              "Environment": "example-webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6425f04e05ec8bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027fc1e5c3351f39a",
            "route_table_id": "rtb-089dd6c73e856d72c",
            "subnet_id": "subnet-0572fc1f27ab7c1df"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.web_app_vpc"
          ]
        },
        {
          "index_key": "us-east-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027f112e6b2fa601d",
            "route_table_id": "rtb-089dd6c73e856d72c",
            "subnet_id": "subnet-0bf699f8f463662a8"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.web_app_vpc"
          ]
        },
        {
          "index_key": "us-east-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fccbbe1a6bf3499",
            "route_table_id": "rtb-089dd6c73e856d72c",
            "subnet_id": "subnet-0fff1606df335f304"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:299953772130:subnet/subnet-0572fc1f27ab7c1df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0572fc1f27ab7c1df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299953772130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "example-webapp"
            },
            "tags_all": {
              "Environment": "example-webapp"
            },
            "vpc_id": "vpc-0d6425f04e05ec8bd"
          },
          "dependencies": [
            "module.network.aws_vpc.web_app_vpc"
          ]
        },
        {
          "index_key": "us-east-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:299953772130:subnet/subnet-0bf699f8f463662a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf699f8f463662a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299953772130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "example-webapp"
            },
            "tags_all": {
              "Environment": "example-webapp"
            },
            "vpc_id": "vpc-0d6425f04e05ec8bd"
          },
          "dependencies": [
            "module.network.aws_vpc.web_app_vpc"
          ]
        },
        {
          "index_key": "us-east-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:299953772130:subnet/subnet-0fff1606df335f304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fff1606df335f304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299953772130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "example-webapp"
            },
            "tags_all": {
              "Environment": "example-webapp"
            },
            "vpc_id": "vpc-0d6425f04e05ec8bd"
          },
          "dependencies": [
            "module.network.aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:299953772130:vpc/vpc-0d6425f04e05ec8bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-056300fd8a4d8c6f9",
            "default_route_table_id": "rtb-0d5759ceb39e98e74",
            "default_security_group_id": "sg-0925a4686af0fe1dd",
            "dhcp_options_id": "dopt-cc3faea7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d6425f04e05ec8bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5759ceb39e98e74",
            "owner_id": "299953772130",
            "tags": {
              "Environment": "example-webapp"
            },
            "tags_all": {
              "Environment": "example-webapp"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}